# U-2-Net

./: .env.example  .gitignore  hf_upload.py  pyproject.toml
src/: __init__.py  u2net.py
src/u2net.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
